[gd_scene load_steps=7 format=3 uid="uid://qtd4h06ybyjq"]

[ext_resource type="Script" path="res://Intro_Manager.gd" id="1_ltw2e"]
[ext_resource type="AudioStream" uid="uid://d3ebk02pgurvl" path="res://Assets/Audio/intro.wav" id="2_qh27b"]

[sub_resource type="Animation" id="Animation_2trbc"]
resource_name = "Intro"
length = 33.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeLayer/Meanwhile_Text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(20.4, 21.4, 22.4, 23.4, 24.5, 25.4, 26.4, 27.4, 28.5, 29.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_u52id"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeLayer/Meanwhile_Text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o6i8t"]
_data = {
"Intro": SubResource("Animation_2trbc"),
"RESET": SubResource("Animation_u52id")
}

[sub_resource type="LabelSettings" id="LabelSettings_m7exc"]

[node name="Intro _Manager" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ltw2e")

[node name="Intro_Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o6i8t")
}

[node name="FadeLayer" type="CanvasLayer" parent="."]

[node name="Black_Screen" type="ColorRect" parent="FadeLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Meanwhile_Text" type="Label" parent="FadeLayer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.0
offset_top = 134.0
offset_right = 85.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.000789065
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 200
text = "Meanwhile..."
label_settings = SubResource("LabelSettings_m7exc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Intro_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qh27b")
